WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305320
REGRESSION(
305446@main
): [Linux] Broke spiel build
https://bugs.webkit.org/show_bug.cgi?id=305320
Summary
REGRESSION(305446@main): [Linux] Broke spiel build
Philippe Normand
Reported
2026-01-12 04:33:14 PST
WebCore/platform/spiel/PlatformSpeechSynthesizerSpiel.cpp:258:25: error: no viable overloaded '=' 258 | m_voiceList = m_platformSpeechWrapper->initializeVoiceList(); | ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:713:13: note: candidate function not viable: no known conversion from 'Vector<RefPtr<PlatformSpeechSynthesisVoice>, [4 * ...]>' to 'const Vector<WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>, [4 * ...]>' for 1st argument 713 | Vector& operator=(const Vector&); | ^ ~~~~~~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:718:13: note: candidate function not viable: no known conversion from 'Vector<RefPtr<PlatformSpeechSynthesisVoice>, [4 * ...]>' to 'Vector<WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>, [4 * ...]>' for 1st argument 718 | Vector& operator=(Vector&&); | ^ ~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:715:13: note: candidate template ignored: could not match 'WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>' against 'WTF::RefPtr<WebCore::PlatformSpeechSynthesisVoice>' 715 | Vector& operator=(const Vector<T, otherCapacity, otherOverflowBehaviour, otherMinimumCapacity, OtherMalloc>&); | ^ /var/home/phil/WebKit/Source/WebCore/platform/spiel/PlatformSpeechSynthesizerSpiel.cpp:263:17: error: no viable overloaded '=' 263 | m_voiceList = m_platformSpeechWrapper->initializeVoiceList(); | ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:713:13: note: candidate function not viable: no known conversion from 'Vector<RefPtr<PlatformSpeechSynthesisVoice>, [4 * ...]>' to 'const Vector<WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>, [4 * ...]>' for 1st argument 713 | Vector& operator=(const Vector&); | ^ ~~~~~~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:718:13: note: candidate function not viable: no known conversion from 'Vector<RefPtr<PlatformSpeechSynthesisVoice>, [4 * ...]>' to 'Vector<WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>, [4 * ...]>' for 1st argument 718 | Vector& operator=(Vector&&); | ^ ~~~~~~~~ /var/home/phil/WebKit/WebKitBuild/GTK/Release/WTF/Headers/wtf/Vector.h:715:13: note: candidate template ignored: could not match 'WTF::Ref<WebCore::PlatformSpeechSynthesisVoice>' against 'WTF::RefPtr<WebCore::PlatformSpeechSynthesisVoice>' 715 | Vector& operator=(const Vector<T, otherCapacity, otherOverflowBehaviour, otherMinimumCapacity, OtherMalloc>&); | ^ 2 errors generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-01-12 04:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56444
EWS
Comment 2
2026-01-12 04:38:21 PST
Committed
305458@main
(c9d41ab32a01): <
https://commits.webkit.org/305458@main
> Reviewed commits have been landed. Closing PR #56444 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-12 04:39:13 PST
<
rdar://problem/167979524
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug