REGRESSION(305446@main): [Linux] Broke spiel build https://bugs.webkit.org/show_bug.cgi?id=305320

Unreviewed, use Vector<Ref<>> for Spiel voices list storage.

* Source/WebCore/platform/spiel/PlatformSpeechSynthesizerSpiel.cpp:
(WebCore::SpielSpeechWrapper::initializeVoiceList):

Canonical link: https://commits.webkit.org/305458@main